# hello-haskell

./: .copy-travis-matrix  .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.md  hello.cabal  hello.hs
.github/workflows/: build.yml  github-actions-demo.yml  haskell.yml
mk/: All.hs  Toplibs.hs  depend.mk  haddock-i  haskell.mk
src/: Hello.hs
test/: sdist  test.hs
tests/: test-sdist  test.hs
