-- Cabal file for hello-haskell
name:                hello
version:             0.0.0
synopsis:            Hello World
description:
  Hello World!
  .
  Compilable via Makefile, cabal and stack.

homepage:            https://github.com/rudymatela/leancheck#readme
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela <rudy@matela.com.br>
maintainer:          Rudy Matela <rudy@matela.com.br>
category:            Testing
build-type:          Simple
cabal-version:       1.18

extra-doc-files: README.md
               , TODO.md
extra-source-files: .gitignore
                  , Makefile
                  , mk/depend.mk
                  , mk/haskell.mk
                  , mk/ghcdeps
                  , mk/haddock-i
                  , mk/All.hs
                  , mk/Toplibs.hs
                  , stack.yaml
                  , tests/test-sdist
                  , .travis.yml
tested-with: GHC==8.4, GHC==8.2, GHC==8.0
           , GHC==7.10, GHC==7.8, GHC==7.6, GHC==7.4


source-repository head
  type:           git
  location:       https://github.com/rudymatela/hello-haskell

source-repository this
  type:           git
  location:       https://github.com/rudymatela/hello-haskell
  tag:            v0.0.0

library
  exposed-modules:     Hello
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, hello, leancheck
  default-language:    Haskell2010
